--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   feather_icons_flutter: ^4.7.4
   material_design_icons_flutter: 3.1.3493
   http: ^0.12.0+1
+  rxdart: ^0.18.0
 
 
 
